# fractal-explorer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  videogen.cpp
include/: sets_definition.hpp
src/: fractal-viewer.cpp  main.cpp  sets_definition.cpp  videogen.cpp
